tests/baselines/reference/shorthand-property-es5-es6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
test.ts(1,19): error TS2307: Cannot find module './foo' or its corresponding type declarations.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== test.ts (1 errors) ====
    import {foo} from './foo';
                      ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
    const baz = 42;
    const bar = { foo, baz };
    